--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: RustFest.EU
 email: team@rustfest.eu
 description: > # this means to ignore newlines until "baseurl:"
   A Community Rust conference for the Rusty folks all around Europe. Mark your
-  calendars, September 17!
+  calendars, April 30th!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://www.rustfest.eu" # the base hostname & protocol for your site
 
