moved Katharina to 'Advisors' section on team page

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -98,6 +98,7 @@ katsel:
     - icon: "github"
       title: "katsel"
       link: "https://github.com/katsel"
+  advisor: true
 andrey:
   name: "Andrey Listochkin"
   nick: "listochkin"
