--- a/_data/header_menu.yml
+++ b/_data/header_menu.yml
@@ -1,6 +1,6 @@
 - title: "News"
   link: "http://blog.rustfest.eu/"
-- title: "Call for Papers"
-  link: "/papers/"
+- title: "Call for Proposals"
+  link: "/cfp/"
 - title: "2016"
   link: "http://2016.rustfest.eu/"
