--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -1,14 +1,12 @@
 - name: "asquera GmbH"
   logoName: asquera.svg
   link: "http://asquera.de"
+  featured: true
   group: partner
 - name: "Honeypot"
   logoName: honeypot2.png
+  featured: true
   link: "https://www.honeypot.io/"
-  group: partner
-- name: "OpenTechSchool Berlin"
-  logoName: ots.png
-  link: "http://opentechschool.org/berlin/"
   group: partner
 - name: "Cosmopolite New Congress Hall"
   logoName: cosmopolite-congress-hall.png
