--- a/_data/header_menu.yml
+++ b/_data/header_menu.yml
@@ -1,7 +1,7 @@
 - title: "News"
   link: "http://blog.rustfest.eu/"
-# - title: "Call for Proposals"
-#   link: "/cfp/"
+- title: "Talks"
+  link: "/talks/"
 - title: "Location"
   link: "/location/"
 - title: "2016"
