Add a colon to all them twitter urls

--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -36,7 +36,7 @@ paul:
       link: "https://github.com/tailhook"
     - icon: twitter
       title: PaulColomiets
-      link: "https//twitter.com/PaulColomiets"
+      link: "https://twitter.com/PaulColomiets"
     # - icon: website
     #   link: 
 pascal:
@@ -50,7 +50,7 @@ pascal:
       link: "https://github.com/killercup"
     - icon: twitter
       title: killercup
-      link: "https//twitter.com/killercup"
+      link: "https://twitter.com/killercup"
     # - icon: website
     #   link: 
 maciej:
@@ -103,7 +103,7 @@ ashley:
       link: "https://github.com/ashleygwilliams"
     - icon: twitter
       title: ag_dubs
-      link: "https//twitter.com/ag_dubs"
+      link: "https://twitter.com/ag_dubs"
      # - icon: website
       # link: 
 pe_meunier:
@@ -115,7 +115,7 @@ pe_meunier:
       link: "https://github.com/"
     - icon: twitter
       title: pe_meunier
-      link: "https//twitter.com/pe_meunier"
+      link: "https://twitter.com/pe_meunier"
     # - icon: website
       # link: 
 sebastian:
@@ -128,7 +128,7 @@ sebastian:
       link: "https://github.com/sdroege"
     - icon: twitter
       title: sdroege_
-      link: "https//twitter.com/sdroege_"
+      link: "https://twitter.com/sdroege_"
     # - icon: website
       # link: 
 luis:
@@ -154,7 +154,7 @@ fletcher:
       link: "https://github.com/fnichol"
     - icon: twitter
       title: fnichol
-      link: "https//twitter.com/fnichol"
+      link: "https://twitter.com/fnichol"
     # - icon: website
       # link: 
 liz:
@@ -167,6 +167,6 @@ liz:
       link: "https://github.com/lbaillie"
     - icon: twitter
       title: _lbaillie
-      link: "https//twitter.com/_lbaillie"
+      link: "https://twitter.com/_lbaillie"
     # - icon: website
     #   link: 
