--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -4,6 +4,9 @@ manish:
   nick: "manishearth"
   thumbnailUrl: "manish.png"
   links:
+    - icon: rust
+      title: "Manishearth on users.rust-lang.org"
+      link: "https://users.rust-lang.org/users/manishearth/activity"
     - icon: "github"
       title: "manishearth"
       link:  "https://github.com/Manishearth"
@@ -19,6 +22,9 @@ edunham:
   nick: "edunham"
   thumbnailUrl: "edunham.jpg"
   links:
+    - icon: rust
+      title: "edunham on users.rust-lang.org"
+      link: "https://users.rust-lang.org/users/edunham/activity"
     - icon: "github"
       title: "manishearth"
       link:  "https://github.com/edunham"
@@ -31,6 +37,9 @@ paul:
   featured: true
   desc: " I have coded in python for 10 years. I'm now coding mostly in Rust. I'm obsessive about asynchronous code and microservice-based architecture. For my day job, I'm building containerization and orchestration systems for evo.company. "
   links:
+    - icon: rust
+      title: "tailhook on users.rust-lang.org"
+      link: "https://users.rust-lang.org/users/tailhook/activity"
     - icon: github
       title: tailhook
       link: "https://github.com/tailhook"
@@ -45,6 +54,9 @@ pascal:
   thumbnailUrl: "killercup.jpg"
   desc: "Pascal Hertleif has been working as software developer for seven years and is active in the Rust community since 2014. He is the author of multiple open source libraries and co-organizer of Rust Cologne. Currently, he is studying computer science at the university of Bonn, Germany, and is employed by a local company as Senior Frontend Developer."
   links:
+    - icon: rust
+      title: "killercup on users.rust-lang.org"
+      link: "https://users.rust-lang.org/users/killercup/activity"
     - icon: github
       title: killercup
       link: "https://github.com/killercup"
@@ -57,6 +69,9 @@ maciej:
   name: Maciej Dziardziel
   thumbnailUrl: "maciej.jpg"
   links:
+    - icon: rust
+      title: "fiedzia on users.rust-lang.org"
+      link: "https://users.rust-lang.org/users/fiedzia/activity"
     - icon: github
       title: Fiedzia
       link: "https://github.com/Fiedzia"
@@ -68,6 +83,9 @@ lislis:
   thumbnailUrl: "lislis.jpg"
   desc: "Lisa is a web developer working at Travis CI. She is involved with the Berlin Rails Girls and Clojure Bridge chapters as either coach or organizer. She enjoys making games for fun and as means of learning."
   links:
+    - icon: rust
+      title: "lislis on users.rust-lang.org"
+      link: "https://users.rust-lang.org/users/lislis/activity"
     - icon: github
       title: lislis
       link: "https://github.com/lislis"
@@ -81,13 +99,19 @@ ingvar:
     - icon: github
       title: RReverser
       link: "https://github.com/RReverser"
-    # - icon: website
-      # link: 
+    - icon: twitter
+      title: RReverser
+      link: "https://twitter.com/RReverser"
+    - icon: website
+      link: "https://rreverser.com/"
 geof:
   name: Geoffroy Couprie
   thumbnailUrl: "geof.png"
   desc: " Geoffroy handles security and quality assurance at Clever Cloud, develops in Rust and researches on parser security at VideoLAN. He thinks a lot about cryptography, protocol design and data management."
   links:
+    - icon: rust
+      title: "geal on users.rust-lang.org"
+      link: "https://users.rust-lang.org/users/geal/activity"
     - icon: github
       title: Geal
       link: "https://github.com/Geal"
@@ -98,6 +122,9 @@ ashley:
   thumbnailUrl: "ashley.jpg"
   desc: "Ashley Williams wears a lot of hats, both literally and professionally. They are currently a services engineer at npm, Inc, the package manager for JavaScript and the Node.js ecosystem. They also represent the Individual Membership on the Node.js Foundation Board of Directors. Previously a backend and services engineer at Mozilla, and a web engineer and educator at Bocoup, Ashley has a long history of designing, developing, and teaching systems and systems architecture."
   links:
+    - icon: rust
+      title: "ag_dubs on users.rust-lang.org"
+      link: "https://users.rust-lang.org/users/ag_dubs/activity"
     - icon: github
       title: ashleygwilliams
       link: "https://github.com/ashleygwilliams"
@@ -110,6 +137,9 @@ pe_meunier:
   name: Pierre-Étienne Meunier
   thumbnailUrl: "pe_meunier.jpg"
   links:
+    - icon: rust
+      title: "pmeunier on users.rust-lang.org"
+      link: "https://users.rust-lang.org/users/pmeunier/activity"
     - icon: github
       title: 
       link: "https://github.com/"
@@ -123,6 +153,9 @@ sebastian:
   thumbnailUrl: "slomo.jpg"
   desc: " Sebastian is a Free Software developer and one of the GStreamer maintainers and core developers. He has been involved with the project since more than 10 years now. He also contributes to various other Free Software projects, like Debian, GNOME and WebKit. While finishing his degree in computer sciences at the University of Paderborn in Germany, he started working as a contractor for GStreamer and related technologies. Nowadays Sebastian lives in Greece and is working at Centricular, a company providing consultancy services around GStreamer and Free Software in general. Apart from multimedia related topics, Sebastian has an interest in digital signal processing, programming languages, machine learning, network protocols and distributed systems."
   links:
+    - icon: rust
+      title: "slomo on users.rust-lang.org"
+      link: "https://users.rust-lang.org/users/slomo/activity"
     - icon: github
       title: sdroege
       link: "https://github.com/sdroege"
@@ -143,12 +176,19 @@ software as the best way to enter the innovative technology community,
 see how it all works, and become a part of it. He enjoys being in front
 of the screen, behind the screen, Friday beers, Sunday ice-creams,
 walks in the park, and people who read bios to the end."
+  links:
+    - icon: rust
+      title: "luisbg on users.rust-lang.org"
+      link: "https://users.rust-lang.org/users/luisbg/activity"
 
 fletcher:
   name: Fletcher Nichol
   thumbnailUrl: "fletcher.jpg"
   desc: " Fletcher Nichol is a software developer from Edmonton, Canada who has worked in jobs ranging from systems administrator to web application developer. He spends far too much time writing open source software and far too little time playing the drums. He is active in many automation and testing projects such as [Chef](https://github.com/chef/chef), [Test Kitchen](http://kitchen.ci/) and is a core developer of [Habitat](https://www.habitat.sh/) which is largely written in Rust. Fletcher works for Chef Software Inc, an automation company for speed and awesomeness."
   links:
+    - icon: rust
+      title: "fnichol on users.rust-lang.org"
+      link: "https://users.rust-lang.org/users/fnichol/activity"
     - icon: github
       title: fnichol
       link: "https://github.com/fnichol"
@@ -162,6 +202,9 @@ liz:
   thumbnailUrl: "liz.jpg"
   desc: "Liz is currently wrangling the JavaScripts and herding the Rubies as an engineer at Tilde. Previously, she spent many years drawing comic books to a limited but enthusiastic audience. She is just getting started at contributing to open source projects and is already addicted. Please send help (don't actually send help)."
   links:
+    - icon: rust
+      title: "lizbaillie on users.rust-lang.org"
+      link: "https://users.rust-lang.org/users/lizbaillie/activity"
     - icon: github
       title: lbaillie
       link: "https://github.com/lbaillie"
