--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -34,7 +34,7 @@ edunham:
 paul:
   name: Paul Colomiets
   thumbnailUrl: "paul.jpg"
-  featured: true
+  featured: false
   desc: " I have coded in python for 10 years. I'm now coding mostly in Rust. I'm obsessive about asynchronous code and microservice-based architecture. For my day job, I'm building containerization and orchestration systems for evo.company. "
   links:
     - icon: rust
@@ -50,7 +50,7 @@ paul:
     #   link: 
 pascal:
   name: Pascal Hertleif
-  featured: true
+  featured: false
   thumbnailUrl: "killercup.jpg"
   desc: "Pascal Hertleif has been working as software developer for seven years and is active in the Rust community since 2014. He is the author of multiple open source libraries and co-organizer of Rust Cologne. Currently, he is studying computer science at the university of Bonn, Germany, and is employed by a local company as Senior Frontend Developer."
   links:
@@ -81,6 +81,7 @@ maciej:
 lislis:
   name: lislis
   thumbnailUrl: "lislis.jpg"
+  featured: true
   desc: "Lisa is a web developer working at Travis CI. She is involved with the Berlin Rails Girls and Clojure Bridge chapters as either coach or organizer. She enjoys making games for fun and as means of learning."
   links:
     - icon: rust
@@ -94,6 +95,7 @@ lislis:
 ingvar:
   name: Ingvar Stepanyan
   thumbnailUrl: "ingvar.jpg"
+  featured: true
   desc: " Obsessed D2D programmer (parsers, compilers, tools & specs), speaker and performance engineer. Currently speeding code up on the fly at Cloudflare."
   links:
     - icon: github
