--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -67,20 +67,20 @@ The Sōzu HTTP reverse proxy is there to solve that problem. This talk will cove
   public: false
 - by: ingvar
   title: "Interaction with real-world JavaScript from compiled Rust"
-  desc: "
+  desc: "Rust recently got an official support for asm.js and WebAssembly targets.
 
-Rust recently got an official support for asm.js and WebAssembly targets.
 
 While many have already played with it, tried to build simple hello-worlds and check the browser/Node.js console for result, there is still no well-established solution for Rust to interact with DOM API, JavaScript libraries or Node.js built-ins.
 
+
 During the talk we will get a glimpse on how this can be done on the low-level, how to wrap common browser APIs into a nice Rust interface and how to interact with JavaScript objects without having a native GC support in Rust (yet)."
-  public: false
+  public: true
 - by: lislis
   title: "Making a game in Rust"
   desc: "When you're trying to learn a new programming language it makes sense to start with a small project. A lot of developers would write an API server or a Twitter bot.
 When I try to learn a new language I start by writing a game.
 Let me show you how I wrote my first game in Rust with Piston."
-  public: false
+  public: true
 - by: "paul"
   title: "vagga -- containerization without daemons"
   desc: "For some reason Docker today is a synonym for containers. The goal of this talk is to break that myth. Vagga is full-scale containerization for development environments which has much more features suited specifically for dev. envs, in a much smaller codebase. I'll try to explore both the essential features of vagga itself and how rust is specifically well suited for containers, including existing libraries."
