--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -59,7 +59,7 @@ In this talk, I'll tell the story of how I convinced my manager and team to set 
 
 
 At the end of the talk, you will have a keen understanding of what problems Rust is good at solving and feel motivated and empowered to start the conversation about bringing Rust into your own organization."
-  public: true
+  public: false
 - by: geof
   title: "Sōzu, a hot reconfigurable reverse HTTP proxy"
   desc: "Could you write a Rust program that never, ever has to stop? Not even for configuration changes or binary upgrades? One that will handle the traffic for thousands of applications on many more virtual machines that get up and down at any time?
