--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -45,21 +45,15 @@ Now, why would anyone want to write such a library? Well, I'll try to show why R
 "
   public: true
 - by: ashley
+  public: true
   title: "How I Convinced the World's Largest Package Manager to Use Rust, and So Can You!"
-  desc: "I made one of my favorite pull requests ever on December 17, 2016:
+  desc: "I made one of my favorite pull requests ever on December 17, 2016: rust-www/pulls/634: add npm to friends page
 
+On any given day, the npm registry, a repository of packages primarily for JavaScript and Node.js, serves around 350,000,000 package downloads. The npm services team is small and this once little Node.js service, the lifeblood of the modern web development workflow, is now a huge set of microservices- and starting in late 2016, it's no longer just Node.js- it's running production Rust.
 
-`rust-www/pulls/634: add npm to friends page`
-
-
-On any given day, the npm registry, a repository of packages primarily for JavaScript and Node.js, serves around 350,000,000 package downloads. The npm services team is small: 5 engineers, 2 managers, and a CTO. This once little Node.js service, the lifeblood of the modern web development workflow, is now a huge set of microservices- and starting in late 2016, it's no longer just Node.js- it's running production Rust.
-
-
-In this talk, I'll tell the story of how I convinced my manager and team to set aside the comfort of a language they had been programming in for years and to give Rust a chance. Along the way, I'll talk about the critical challenges that the npm registry services encounter on a daily basis, the patterns we've adopted to cope with the heavy operational load, and how they are well suited to be solved with Rust. I'll also highlight the unique aspects of Rust that make it an pleasure to learn and teach, as well as how it is a strong technical candidate for replacing Node.js (hint: Tokio!).
-
+In this talk, I'll tell the story of how I convinced my manager and team to give Rust a chance. Along the way, I'll talk about the critical challenges that the npm registry services encounter on a daily basis, the patterns we've adopted to cope with the heavy operational load, and how they are well suited to be solved with Rust. I'll also highlight the unique aspects of Rust that make it an pleasure to learn and teach, as well as how it is a strong technical candidate for replacing Node.js (hint: Tokio!).
 
 At the end of the talk, you will have a keen understanding of what problems Rust is good at solving and feel motivated and empowered to start the conversation about bringing Rust into your own organization."
-  public: false
 - by: geof
   title: "Sōzu, a hot reconfigurable reverse HTTP proxy"
   desc: "Could you write a Rust program that never, ever has to stop? Not even for configuration changes or binary upgrades? One that will handle the traffic for thousands of applications on many more virtual machines that get up and down at any time?
