travel info, hotel coupon and menu added

--- a/_data/header_menu.yml
+++ b/_data/header_menu.yml
@@ -2,7 +2,9 @@
   link: "http://blog.rustfest.eu/"
 - title: "Talks"
   link: "/talks/"
-- title: "Location"
+- title: "Kyiv"
   link: "/location/"
+- title: "Travel"
+  link: "/travel/"
 - title: "2016"
   link: "http://2016.rustfest.eu/"
