--- a/_data/header_menu.yml
+++ b/_data/header_menu.yml
@@ -2,6 +2,8 @@
   link: "http://blog.rustfest.eu/"
 - title: "Talks"
   link: "/talks/"
+- title: "Schedule"
+  link: "/schedule/"
 - title: "Kyiv"
   link: "/location/"
 - title: "Travel"
