Use white-font for 1aim as wellpng

--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -11,7 +11,7 @@
   link: "https://mozilla.org"
   group: sponsor
 - name: "1aim"
-  logoName: 1aim.png
+  logoName: 1aim.svg
   featured: true
   link: "https://1aim.com"
   group: sponsor
