--- a/_data/team.yml
+++ b/_data/team.yml
@@ -140,7 +140,7 @@ hoverbear:
       title: "hoverbear.org"
       link: "https://hoverbear.org"
 thomascovenant:
-  name: "Dina Jalkanen"
+  name: "Dina-Solveig Jalkanen"
   nick: "thomascovenant"
   desc: ""
   thumbnailUrl: dina.jpg
