--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -89,6 +89,11 @@ Let me show you how I wrote my first game in Rust with Piston."
   public: true
   title: "Writing Idiomatic Libraries in Rust"
   desc: "The existence of libraries with nice, user-friendly interfaces is one of the most important factors when choosing a programming language. And while there are lots of books about how to write idiomatic libraries in other languages, finding the same information for Rust is more difficult. With this in mind, this talk will present several techniques that help developers take advantage of all that Rust has to offer and create idiomatic APIs: From implementing conversion traits and session types to using custom iterators and decorating built-in types."
-- by: 
-  title: 
-  desc: 
+- by: "manish"
+  public: true
+  title: "\"Open\" as in \"Welcoming\": Facilitating Contributions"
+  desc: "Is your open source project \"open\" as in \"available\", or \"open\" as in \"welcoming\"? I'm of the opinion that we should always strive to be welcoming in open source. It's a great way to grow your project, and a great way for people to get opportunities to improve themselves as programmers. Everyone wins! In this talk we'll explore some techniques for doing this effectively, and better understand how to approach mentorship in open source."
+  special: "keynote"
+- by:
+  title:
+  desc:
